Update to my analysis.

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -2241,7 +2241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is no strong relationship between latitude and wind speed.  It does appear there is a high wind speed in the Norther Hemispher to the South.  "
+    "There is no strong relationship between latitude and wind speed between the Northern or the Southern Hemispher"
    ]
   }
  ],
